Fix compilation of TextureMapperShaderManager.cpp with MSVC https://bugs.webkit.org/show_bug.cgi?id=96121

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-09-07
Reviewed by Kenneth Rohde Christiansen.

Named variadic parameters in macros appear to be a GCC extension. Fortunately __VA_ARGS__ seems
to work with GCC and MSVC here.

* platform/graphics/texmap/TextureMapperShaderManager.cpp:
(WebCore):
(WebCore::StandardFilterProgram::StandardFilterProgram):

git-svn-id: svn://svn.chromium.org/blink/trunk@127950 bbb929c8-8fbe-4397-9dbb-9b2b20218538