third_party/WebKit/Source/WebCore/platform/graphics/texmap/TextureMapperShaderManager.cpp
@@ -31,7 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
-#define STRINGIFY(src...) #src
+#define STRINGIFY(...) #__VA_ARGS__
 
 static const char* fragmentShaderSourceOpacityAndMask =
     STRINGIFY(
@@ -389,12 +389,12 @@ StandardFilterProgram::StandardFilterProgram(GraphicsContext3D* context, FilterO
                 }
             );
 
-#define STANDARD_FILTER(x...) \
+#define STANDARD_FILTER(...) \
         "precision mediump float;\n"\
         "varying highp vec2 v_texCoord;\n"\
         "uniform highp float u_amount;\n"\
         "uniform sampler2D u_texture;\n"\
-        #x\
+        #__VA_ARGS__ \
         "void main(void)\n { gl_FragColor = shade(texture2D(u_texture, v_texCoord)); }"
 
     const char* fragmentShaderSource = 0;
